--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^51.0.31",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
@@ -30,8 +31,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
-    "expo-location": "~17.0.1"
+    "expo-font": "~12.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,6 +43,7 @@
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
