--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@rnmapbox/maps": "^10.1.30",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.45.3",
     "expo": "^51.0.31",
     "expo-constants": "~16.0.1",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.14",
@@ -32,9 +35,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
-    "react-native-web": "~0.19.10",
-    "expo-font": "~12.0.9",
-    "@gorhom/bottom-sheet": "^4"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
